--- a/wp-content/languages/plugins/akismet-es_ES.po
+++ b/wp-content/languages/plugins/akismet-es_ES.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Plugins - Akismet Anti-Spam - Stable (latest release) package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2018-05-26 15:35:43+0000\n"
+"PO-Revision-Date: 2018-07-18 21:53:33+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -11,6 +11,14 @@ msgstr ""
 "Language: es\n"
 "Project-Id-Version: Plugins - Akismet Anti-Spam - Stable (latest release)\n"
 
+#: views/notice.php:138
+msgid "To help your site with transparency under privacy laws like the GDPR, Akismet can display a notice to your users under your comment forms. This feature is disabled by default, however, you can turn it on below."
+msgstr "Para ayudar a tu sitio con la transparencia necesaria para leyes de privacidad como el RGPD, Akismet puede mostrar un aviso a tus usuarios debajo de los formularios de comentarios. Esta característica está inactiva por defecto, sin embargo puedes activarla aquí abajo."
+
+#: views/config.php:162
+msgid "To help your site with transparency under privacy laws like the GDPR, Akismet can display a notice to your users under your comment forms. This feature is disabled by default, however, you can turn it on above."
+msgstr "Para ayudar a tu sitio con la transparencia necesaria para leyes de privacidad como el RGPD, Akismet puede mostrar un aviso a tus usuarios debajo de los formularios de comentarios. Esta característica está inactiva por defecto, sin embargo puedes activarla aquí arriba."
+
 #: views/notice.php:139
 msgid " Please <a href=\"%s\">enable</a> or <a href=\"%s\">disable</a> this feature. <a href=\"%s\" id=\"akismet-privacy-notice-control-notice-info-link\" target=\"_blank\">More information</a>."
 msgstr " Por favor <a href=\"%s\">activa</a> o <a href=\"%s\">desactiva</a> esta característica. <a href=\"%s\" id=\"akismet-privacy-notice-control-notice-info-link\" target=\"_blank\">Más información</a>."
@@ -18,10 +26,6 @@ msgstr " Por favor <a href=\"%s\">activa</a> o <a href=\"%s\">desactiva</a> esta
 #: views/notice.php:137
 msgid "Akismet & Privacy."
 msgstr "Akismet y privacidad."
-
-#: views/config.php:162 views/notice.php:138
-msgid "To help your site be compliant with GDPR and other laws requiring notification of tracking, Akismet can display a notice to your users on your contact form. This feature is disabled by default, however, if you or your audience is located in Europe, you need to turn it on."
-msgstr "Para ayudar a que tu sitio cumpla con la GDPR y otras leyes que requieren notificación de seguimiento, Akismet puede mostrar un aviso a tus usuarios en tu formulario de contacto. Esta característica esta desactivada por defecto, sin embargo, si tú o tu audiencia os encontráis en Europa, debes activarla."
 
 #: views/config.php:160
 msgid "Do not display privacy notice."
@@ -40,8 +44,12 @@ msgid "Privacy"
 msgstr "Privacidad"
 
 #: class.akismet.php:1419
-msgid "This site uses Akismet to reduce spam. <a href=\"%s\">Learn how your comment data is processed</a>."
-msgstr "Esto sitio usa Akismet para reducir el spam. <a href=\"%s\">Aprende cómo se procesan los datos de tus comentarios</a>."
+msgid "This site uses Akismet to reduce spam. <a href=\"%s\" target=\"_blank\" rel=\"nofollow noopener\">Learn how your comment data is processed</a>."
+msgstr "Este sitio usa Akismet para reducir el spam. <a href=\"%s\" target=\"_blank\" rel=\"nofollow noopener\">Aprende cómo se procesan los datos de tus comentarios</a>."
+
+#: class.akismet-admin.php:86
+msgid "We collect information about visitors who comment on Sites that use our Akismet anti-spam service. The information we collect depends on how the User sets up Akismet for the Site, but typically includes the commenter's IP address, user agent, referrer, and Site URL (along with other information directly provided by the commenter such as their name, username, email address, and the comment itself)."
+msgstr "Recopilamos información sobre los visitantes que comentan en los sitios que usan nuestro servicio anti-spam Akismet. La información que recopilamos depende de cómo el usuario configure Akismet en el sitio, pero normalmente incluye la dirección IP del comentarista, el navegador del usuario, el sitio de referencia y la URL del sitio (además de otra información directamente facilitada por el comentarista, como su nombre, nombre de usuario, dirección de correo electrónico y el mismo comentario)."
 
 #: class.akismet.php:226
 msgid "Comment discarded."
@@ -99,7 +107,7 @@ msgstr "En esta página podrás actualizar tus ajustes de Akismet y ver las esta
 msgid "Used by millions, Akismet is quite possibly the best way in the world to <strong>protect your blog from spam</strong>. It keeps your site protected even while you sleep. To get started: activate the Akismet plugin and then go to your Akismet Settings page to set up your API key."
 msgstr "Utilizado por millones, Akismet es, posiblemente, la mejor manera del mundo de  <strong>proteger tu blog del spam</strong>. Mantiene tu blog protegido incluso cuando duermes. Para comenzar: activa el plugin Akismet y ve a la página de ajustes de Akismet para establecer tu clave de API."
 
-#. #-#-#-#-#  akismet-code.pot (Akismet Anti-Spam 4.0.5)  #-#-#-#-#
+#. #-#-#-#-#  akismet-code.pot (Akismet Anti-Spam 4.0.8)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: class.akismet-admin.php:111 class.akismet-admin.php:114
 msgid "Akismet Anti-Spam"
@@ -169,11 +177,11 @@ msgstr "Estadísticas detalladas"
 msgid "Statistics"
 msgstr "Estadísticas"
 
-#: class.akismet-admin.php:1161
+#: class.akismet-admin.php:1167
 msgid "Used by millions, Akismet is quite possibly the best way in the world to <strong>protect your blog from spam</strong>. It keeps your site protected even while you sleep. To get started, just go to <a href=\"admin.php?page=akismet-key-config\">your Akismet Settings page</a> to set up your API key."
 msgstr "Utilizado por millones de personas, Akismet es posiblemente la mejor manera de <strong>proteger tu blog del spam</strong>. Mientras duermes, mantiene el sitio protegido. Para comenzar, sólo ve a <a href=\"admin.php?page=akismet-key-config\">tu página de configuración de Akismet</a> y configura tu clave de API."
 
-#: class.akismet-admin.php:1158
+#: class.akismet-admin.php:1164
 msgid "Used by millions, Akismet is quite possibly the best way in the world to <strong>protect your blog from spam</strong>. Your site is fully configured and being protected, even while you sleep."
 msgstr "Utilizado por millones, Akismet es, posiblemente, la mejor manera del mundo de <strong>proteger tu blog del spam</strong>. Mantiene tu blog protegido incluso cuando duermes."
 
@@ -316,7 +324,7 @@ msgstr "Akismet filtra el spam para que puedas centrarte en cosas más important
 
 #: views/notice.php:129
 msgid "To continue your service, <a href=\"%s\" target=\"_blank\">upgrade to an Enterprise subscription</a>, which covers an unlimited number of sites."
-msgstr "Para continuar con su servicio, <a href=\"%s\" target=\"_blank\">actualize a una suscripción  Enterprise</a>, que cubre a un número ilimitado de sitios. "
+msgstr "Para continuar con tu servicio, <a href=\"%s\" target=\"_blank\">actualiza a una suscripción Enterprise</a>, que cubre un número ilimitado de sitios. "
 
 #: views/notice.php:122
 msgid "Your Pro subscription allows the use of Akismet on only one site. Please <a href=\"%s\" target=\"_blank\">purchase additional Pro subscriptions</a> or upgrade to an Enterprise subscription that allows the use of Akismet on unlimited sites."
@@ -532,8 +540,8 @@ msgstr[1] "<a href=\"%1$s\">Akismet</a> ha protegido tu sitio de <a href=\"%2$s\
 #: class.akismet-admin.php:352
 msgid "<a href=\"%1$s\">Akismet</a> has protected your site from %2$s spam comment already. "
 msgid_plural "<a href=\"%1$s\">Akismet</a> has protected your site from %2$s spam comments already. "
-msgstr[0] "<a href=\"%1$s\">Akismet</a> ha protegido su sitio de %2$s comentario de spam hasta ahora."
-msgstr[1] "<a href=\"%1$s\">Akismet</a> ha protegido su sitio de %2$s comentarios de spam hasta ahora."
+msgstr[0] "<a href=\"%1$s\">Akismet</a> ha protegido tu sitio de %2$s comentario de spam hasta ahora. "
+msgstr[1] "<a href=\"%1$s\">Akismet</a> ha protegido tu sitio de %2$s comentarios de spam hasta ahora. "
 
 #: class.akismet-admin.php:358
 msgid "<a href=\"%s\">Akismet</a> blocks spam from getting to your blog. "
@@ -821,7 +829,7 @@ msgstr "La clave que has introducido no es válida. Por favor compruébala."
 
 #: views/notice.php:120
 msgid "You&#8217;re using your Akismet key on more sites than your Pro subscription allows."
-msgstr "Estás utilizando tu clave de Akismet en más sitios de los que te permite su suscripción Pro."
+msgstr "Estás utilizando tu clave de Akismet en más sitios de los que permite tu suscripción Pro."
 
 #: views/notice.php:127
 msgid "You&#8217;re using Akismet on far too many sites for your Pro subscription."
